--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,9 +4,8 @@
     <string name="main_activity_title">HoloKen</string>
     
     <string name="main_section_title">HoloKen</string>
-    <string name="game_section_title">Current Game</string>
     <string name="saves_section_title">Saved Games</string>
-    <string name="calculator_section_title">Calculator</string>
+    <string name="stats_section_title">Statistics</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="menu_new">New Game</string>
@@ -14,32 +13,42 @@
     <string name="menu_settings">Settings</string>
     <string name="menu_help">Help</string>
     
-    <string name="game_grid_4">4x4 (Easy)</string>
-    <string name="game_grid_5">5x5 (Medium)</string>
-    <string name="game_grid_6">6x6 (Hard)</string>
-    <string name="game_grid_7">7x7 (Harder)</string>
-    <string name="game_grid_8">8x8 (Hardest)</string>
-    <string name="game_grid_9">9x9 (Ultimate)</string>
+    <string name="grid_size_4">4x4 (Easy)</string>
+    <string name="grid_size_5">5x5 (Medium)</string>
+    <string name="grid_size_6">6x6 (Hard)</string>
+    <string name="grid_size_7">7x7 (Harder)</string>
+    <string name="grid_size_8">8x8 (Hardest)</string>
+    <string name="grid_size_9">9x9 (Ultimate)</string>
+    
+    <string name="number1">1</string>
+    <string name="number2">2</string>
+    <string name="number3">3</string>
+    <string name="number4">4</string>
+    <string name="number5">5</string>
+    <string name="number6">6</string>
+    <string name="number7">7</string>
+    <string name="number8">8</string>
+    <string name="number9">9</string>
     
     <string name="settings_group_puzzle">Puzzle Generation (new game)</string>
     <string name="setting_default_game_grid_title">Default game grid</string>
-	<string name="setting_operators_display_title">Operators display (+, -, *, /)</string>
+	<string name="setting_show_operators_title">Always show operators</string>
+	<string name="setting_show_operators_summary">Operators (+, -, *, /) will be displayed</string>
 	
     <string name="settings_group_assistance">Game Assistance</string>
     <string name="setting_flag_bad_maths_title">Highlight incorrect maths</string>
     <string name="setting_flag_duplicates_title">Highlight duplicates</string>
     
-    <string name="settings_group_display_sound">Display and Sound</string>
+    <string name="settings_group_display">Display</string>
     <string name="setting_theme_title">Theme</string>
     <string name="setting_pencil_layout_title">Pencil marks in 3x3 grid</string>
-    <string name="setting_pencil_layout_summary_on">Show pencil marks in 3x3 grid</string>
-    <string name="setting_pencil_layout_summary_off">Show pencil marks in numerical order instead</string> 
-    <string name="setting_number_buttons_display_title">Auto-hide number buttons</string>
+    <string name="setting_pencil_layout_summary_on">Show in 3x3 grid</string>
+    <string name="setting_pencil_layout_summary_off">Show in numerical order instead</string> 
+    <string name="setting_number_buttons_display_title">Auto-hide buttons</string>
     <string name="setting_keep_screen_on_title">Keep screen on</string>
-    <string name="setting_sound_effects_title">Enable sound effects</string>
     
     <string name="help_section_title">Help</string>
-    <string name="help_rules_title">HoloKen Rules</string>
+    <string name="help_rules_title">Rules</string>
     <string name="help_rules_summary">
         Fill in each row and column with digits from 1 to grid size (4-9).\n\n
 		Digits must only be used once per row and column.\n\n
@@ -57,13 +66,13 @@
     
     <string name="about_section_title">About</string>
     <string name="about_version_title">Version</string>
-    <string name="about_version_summary">HoloKen 1.0 (R1)</string>
+    <string name="about_version_summary">HoloKen Alpha (R1)</string>
     <string name="about_license_title">License</string>
     <string name="about_license_summary">GNU General Public License Version 2</string>
     <string name="about_website_title">Project Home</string>
     <string name="about_website_summary">Report any bugs or suggestions at\n<a href="http://github.com/holoken">http://github.com/holoken</a></string>
     <string name="about_developers_title">Developers</string>
-    <string name="about_developers_summary">Ben Buxton, Stephen Lee, Amanda Chow</string>
+    <string name="about_developers_summary">Amanda Chow, with much credit to Ben Buxton and Stephen Lee of Mathdoku for their game engine</string>
     <string name="about_changelog_title">Changelog</string>
     <string name="about_changelog_summary">
         R1: Ported Mathdoku (net.cactii.mathdoku) to ICS
