--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,7 +8,8 @@
     <string name="menu_stats">Statistics</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_help">Help</string>
-    
+
+   <string name="menu_show_mistakes">Show mistakes</string>  
     <string name="menu_reveal_cell">Reveal cell</string>
     <string name="menu_reveal_cage">Reveal cage</string>
     <string name="menu_show_solution">Show solution</string>    
@@ -48,6 +49,7 @@
     <string name="setting_pencil_3x3_summary_on">Show in 3x3 grid</string>
     <string name="setting_pencil_3x3_summary_off">Show in numerical order instead</string> 
     <string name="setting_keypad_display_title">Auto-hide buttons</string>
+	<string name="setting_show_fullscreen_title">Show full screen</string>
     <string name="setting_keep_screen_on_title">Keep screen on</string>
     
     <string name="help_section_title">Help</string>
@@ -69,15 +71,17 @@
     
     <string name="about_section_title">About</string>
     <string name="about_version_title">Version</string>
-    <string name="about_version_summary">HoloKen Alpha (R1)</string>
+    <string name="about_version_summary">HoloKen Alpha v1.1</string>
     <string name="about_license_title">License</string>
-    <string name="about_license_summary">GNU General Public License Version 2</string>
+    <string name="about_license_summary">GNU General Public License v3</string>
     <string name="about_website_title">Project Home</string>
     <string name="about_website_summary">Report any bugs or suggestions at\n<a href="http://github.com/holoken">http://github.com/holoken</a></string>
     <string name="about_developers_title">Developers</string>
-    <string name="about_developers_summary">Amanda Chow, with much credit to Ben Buxton and Stephen Lee of Mathdoku for their game engine</string>
+    <string name="about_developers_summary">Amanda Chow, with much credit to Ben Buxton and Stephen Lee of Mathdoku</string>
     <string name="about_changelog_title">Changelog</string>
     <string name="about_changelog_summary">
+        Alpha v1.1: Added colour feedback and more hint assistance
+        Alpha v1.0: Added landscape mode and tablet support
         Alpha v0.9: Re-added save functions
         Alpha v0.5: Changed button and UI functionality
         Alpha v0.2: Redesigned Mathdoku UI and layouts
@@ -92,10 +96,10 @@
     <string name="dialog_restart_title">Restart game?</string>
 	<string name="dialog_restart_msg">This game will be restarted</string>
 	
-	<string name="dialog_delete_title">Test game 00:01:05</string>
+	<string name="dialog_delete_title">Delete game?</string>
 	<string name="dialog_delete_msg">This game will be deleted</string>
 	
-	<string name="toast_cheated">This puzzle is too hard eh?</string>
-	<string name="toast_progress">mistakes were made</string>
+	<string name="toast_cheated">This puzzle is hard eh?</string>
+	<string name="toast_progress">mistake(s) made</string>
     
 </resources>
