--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="menu_settings">Settings</string>
     <string name="menu_help">Help</string>
 
-   <string name="menu_show_mistakes">Show mistakes</string>  
+    <string name="menu_show_mistakes">Show mistakes</string>  
     <string name="menu_reveal_cell">Reveal cell</string>
     <string name="menu_reveal_cage">Reveal cage</string>
     <string name="menu_show_solution">Show solution</string>    
@@ -30,7 +30,8 @@
     <string name="number7">7</string>
     <string name="number8">8</string>
     <string name="number9">9</string>
-    
+
+    <string name="time_zero">00:00:00</string>
     <string name="save_current_game">Save current game</string>
     <string name="stats_title">HoloKen Stats</string>
     
@@ -48,7 +49,7 @@
     <string name="setting_pencil_3x3_title">Pencil marks in 3x3 grid</string>
     <string name="setting_pencil_3x3_summary_on">Show in 3x3 grid</string>
     <string name="setting_pencil_3x3_summary_off">Show in numerical order instead</string> 
-    <string name="setting_keypad_display_title">Auto-hide buttons</string>
+    <string name="setting_show_timer_title">Show game timer</string>
 	<string name="setting_show_fullscreen_title">Show full screen</string>
     <string name="setting_keep_screen_on_title">Keep screen on</string>
     
