--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -49,6 +49,7 @@
     
     <string name="settings_group_puzzle">Puzzle Generation</string>
     <string name="setting_default_game_grid_title">Default game grid</string>
+    <string name="setting_default_operations_title">Default operations</string>
 	
     <string name="settings_group_assistance">Game Assistance</string>
    	<string name="setting_show_operators_title">Always show operators</string>
@@ -94,7 +95,8 @@
     <string name="about_developers_summary">Amanda Chow, with much credit to Ben Buxton and Stephen Lee of Mathdoku</string>
     <string name="about_changelog_title">Changelog</string>
     <string name="about_changelog_summary">
-		Alpha v1.4: Integrated themes and enabled selector to change color w/ mode\n
+        Alpha v1.6: Added default operations setting\n
+		Alpha v1.5: Integrated themes and enabled selector to change color w/ mode\n
         Alpha v1.3: Changed out \'Show operators\' to work in-game\n
         Alpha v1.2: Added timer and saves are more detailed\n
         Alpha v1.1: Added colour feedback and more hint assistance\n
@@ -115,7 +117,7 @@
 	<string name="dialog_delete_title">Delete game?</string>
 	<string name="dialog_delete_msg">This game will be deleted</string>
 	
-	<string name="toast_cheated">This puzzle is hard eh?</string>
+	<string name="toast_cheated">This puzzle is hard eh</string>
 	<string name="toast_progress">mistake(s) made</string>
     
 </resources>
