--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,8 +3,8 @@
     <string name="app_name">HoloKen</string>
 
     <string name="menu_new">New Game</string>
-    <string name="menu_calculator">Calculator</string>
     <string name="menu_save">Save/Load</string>
+    <string name="menu_restart_game">Restart Game</string>     
     <string name="menu_share">Share puzzle</string>
     <string name="menu_stats">Statistics</string>
     <string name="menu_settings">Settings</string>
@@ -13,7 +13,7 @@
     <string name="menu_show_mistakes">Show mistakes</string>  
     <string name="menu_reveal_cell">Reveal cell</string>
     <string name="menu_reveal_cage">Reveal cage</string>
-    <string name="menu_show_solution">Show solution</string>    
+    <string name="menu_show_solution">Show solution</string>   
     
     <string name="grid_size_4">4x4 (Easy)</string>
     <string name="grid_size_5">5x5 (Medium)</string>
@@ -51,7 +51,9 @@
     
     <string name="settings_group_puzzle">Puzzle Generation</string>
     <string name="setting_default_game_grid_title">Default game grid</string>
+    <string name="setting_default_game_grid_summary">Set the grid size for new games</string>
     <string name="setting_default_operations_title">Default operations</string>
+    <string name="setting_default_operations_summary">Choose arithmetic modes of operation</string>
    	<string name="setting_show_operators_title">Always show operators</string>
 	<string name="setting_show_operators_summary">Operators (+, -, *, /) will be displayed</string>
 	
@@ -68,6 +70,12 @@
 	<string name="setting_show_fullscreen_title">Show full screen</string>
     <string name="setting_keep_screen_on_title">Keep screen on</string>
     
+    <string name="settings_group_about">HoloKen</string>
+    <string name="setting_rate_app_title">Rate HoloKen</string>
+    <string name="setting_rate_app_summary">Rate HoloKen in the Google Play Store</string>
+    <string name="setting_report_bugs_title">Any bugs or suggestions?</string>
+    <string name="setting_report_bugs_summary">Click to go to http://code.google.com/p/holoken</string>
+    
     <string name="help_section_title">Help</string>
     <string name="help_rules_title">Rules</string>
     <string name="help_rules_summary">
@@ -82,13 +90,13 @@
 		Fill up the grid squares using the number buttons.
 		Toggle between pen, pencil and eraser modes to mark or clear possibilities.\n\n
 		Long-press the Pen button to quickly pen in all previously marked possibilities.\n\n
-		Long-press a cell for more hints (show mistakes, reveal cell, show solution).\n\n
+		Long-press a cell for more hints (show mistakes, reveal cell, show solution), or to restart the game.\n\n
 		HoloKen will auto-save your game if you need to stop.      
     </string>
     
     <string name="about_section_title">About</string>
     <string name="about_version_title">Version</string>
-    <string name="about_version_summary">HoloKen Alpha v1.8</string>
+    <string name="about_version_summary">HoloKen Alpha v1.9</string>
     <string name="about_license_title">License</string>
     <string name="about_license_summary">GNU General Public License v3</string>
     <string name="about_website_title">Project Home</string>
@@ -97,7 +105,8 @@
     <string name="about_developers_summary">Amanda Chow, with much credit to Ben Buxton and Stephen Lee of Mathdoku</string>
     <string name="about_changelog_title">Changelog</string>
     <string name="about_changelog_summary">
-        Alpha v1.8: Minor bugfixes, added layout for 480dp+ screens\n
+        Alpha v1.9: Added single-state undo\n
+        Alpha v1.8: Minor bugfixes, added ActionBar layout for 480dp+ screens\n
         Alpha v1.7: Fixed save game list and modified themes\n
         Alpha v1.6: Added default operations setting\n
 		Alpha v1.5: Integrated themes and enabled selector to change color w/ mode\n
@@ -108,7 +117,6 @@
         Alpha v0.9: Re-added save functions\n
         Alpha v0.5: Changed button and UI functionality\n
         Alpha v0.2: Redesigned Mathdoku UI and layouts\n
-        1.0: Initial game release
     </string>
     
     <string name="dialog_ok">OK</string>
@@ -121,6 +129,9 @@
 	
 	<string name="dialog_delete_title">Delete game?</string>
 	<string name="dialog_delete_msg">This game will be deleted</string>
+	
+	<string name="dialog_delete_all_title">Delete all games?</string>
+	<string name="dialog_delete_all_msg">All games will be deleted</string>
 	
 	<string name="toast_cheated">This puzzle is hard eh</string>
 	<string name="toast_mistakes">mistake(s) out of</string>
